# rust-workshop

./: Cargo.toml  README.md  run.sh
events-backend/: Cargo.toml
events-backend/src/: actor.rs  error.rs  lib.rs  messages.rs
events-http-server/: Cargo.toml
events-http-server/src/: error.rs  lib.rs  main.rs  response_error.rs
events-http-server/src/handlers/: add_event.rs  events_list.rs  mod.rs
events-http-server/src/routes/: v1.rs
events-serializers/: Cargo.toml
events-serializers/src/: event.rs  lib.rs
test-data/: 01-send-message.json  02-send-message.json  03-send-message.json  04-send-message.json  send-message.json
