[package]
name = "events-backend"
version = "0.1.0"
authors = ["Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
redis = { version = "0.17", features = ["tokio-rt-core", "connection-manager"] }
actix_derive = "0.5"
actix-rt = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
hitbox-actix = "0.1"
serde = { version = "1", features = ["derive"] }
