[package]
name = "events"
version = "0.1.0"
authors = ["Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
chrono = "0.4"
events-backend = { path = "../events-backend" }
events-serializers = { path = "../events-serializers" }
hitbox-actix = "0.1.1"
